--- a/node/weightmonitor/MDK-ARM/weightmonitor.uvprojx
+++ b/node/weightmonitor/MDK-ARM/weightmonitor.uvprojx
@@ -332,7 +332,7 @@
               <MiscControls>--C99</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xB</Define>
               <Undefine></Undefine>
-              <IncludePath>../usercode;                                        ../Inc;                                          ../Drivers/STM32F1xx_HAL_Driver/Inc;                                          ../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;                                          ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;                                          ../Middlewares/Third_Party/FreeRTOS/Source/include;                                          ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;                                          ../Drivers/CMSIS/Include;                                          ../Drivers/CMSIS/Device/ST/STM32F1xx/Include</IncludePath>
+              <IncludePath>../usercode;                                         ../Inc;                                           ../Drivers/STM32F1xx_HAL_Driver/Inc;                                           ../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;                                           ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;                                           ../Middlewares/Third_Party/FreeRTOS/Source/include;                                           ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;                                           ../Drivers/CMSIS/Include;                                           ../Drivers/CMSIS/Device/ST/STM32F1xx/Include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -455,6 +455,11 @@
               <FileType>1</FileType>
               <FilePath>../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pcd_ex.c</FilePath>
             </File>
+            <File>
+              <FileName>stm32f1xx_hal_iwdg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_iwdg.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -559,6 +564,11 @@
               <FileName>dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Src/dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>iwdg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>../Src/iwdg.c</FilePath>
             </File>
           </Files>
         </Group>
