--- a/newhub/config_img.json
+++ b/newhub/config_img.json
@@ -1,5 +1,7 @@
 {
-	"addr":"http://211.83.111.245/biaoben/img_receive.php",
-	"imgfilepath":"/tmp/img.jpg",
-	"timeinterval":"600"
+    "addr":"http://211.83.111.245/biaoben/img_receive.php",
+    "imgfilepath":"/tmp/img.jpg",
+    "timeinterval":600,
+    "videodevice":"/dev/video0",
+    "resolution":[640,480]
 }
