--- a/newhub/config.json
+++ b/newhub/config.json
@@ -4,6 +4,8 @@
 		"id":1,
 		"devname":"/dev/ttyUSB0",
 		"baudrate":9600,
-		"srvaddr":"http://211.83.111.245/biaoben/receive.php"
+		"srvaddr":"http://211.83.111.245/biaoben/receive.php",
+		"gap":10,
+		"start_delay":10
 	}
 }
