--- a/newhub/config.json
+++ b/newhub/config.json
@@ -4,6 +4,7 @@
 		"nodetype":"maillog",
 		"start_delay":60,
 		"restart_delay":60,
+		"max_retry":-1,
 		"logpath":"/var/log/project_sperm/log_maillog_{}.log",
 		"logsuffixformat":"%Y_%m_%d_%X_%z",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
@@ -23,11 +24,15 @@
 		"nodetype":"scales",
 		"start_delay":60,
 		"restart_delay":60,
+		"max_retry":-1,
 		"logpath":"/var/log/project_sperm/log_scales1_{}.log",
 		"logsuffixformat":"%Y_%m_%d_%X_%z",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
 		"pidfile":"/temp/project_sperm_scales1.pid",
 		"dpidfile":"/temp/project_sperm_scales1d.pid",
+		"stdout":"/dev/null",
+		"stdin":"/dev/null",
+		"stderr":"/dev/null",
 
 		"devname":"/dev/ttyUSB0",
 		"baudrate":9600,
@@ -40,17 +45,38 @@
 		"nodetype":"cam",
 		"start_delay":60,
 		"restart_delay":60,
+		"max_retry":-1,
 		"logpath":"/var/log/project_sperm/log_cam0_{}.log",
 		"logsuffixformat":"%Y_%m_%d_%X_%z",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
 		"pidfile":"/temp/project_sperm_cam0.pid",
 		"dpidfile":"/temp/project_sperm_cam0d.pid",
+		"stdout":"/dev/null",
+		"stdin":"/dev/null",
+		"stderr":"/dev/null",
 
 		"addr":"http://211.83.111.245/biaoben/img_receive.php",
 		"imgfilepath":"/tmp/img_cam0.jpg",
 		"interval":600,
 		"videodevice":"/dev/video0",
 		"resolution":[1080,720]
+	},
+	"test0":
+	{
+		"nodetype":"test",
+		"start_delay":5,
+		"restart_delay":5,
+		"max_retry":5,
+		"logpath":"/var/log/project_sperm/log_test0_{}.log",
+		"logsuffixformat":"%Y_%m_%d_%X_%z",
+		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
+		"pidfile":"/temp/project_sperm_test0.pid",
+		"dpidfile":"/temp/project_sperm_test0d.pid",
+		"stdout":"/dev/null",
+		"stdin":"/dev/null",
+		"stderr":"/dev/null",
+
+		"exitcode":-1
 	}
 }
 
