--- a/newhub/config.json
+++ b/newhub/config.json
@@ -22,9 +22,9 @@
 	"scales1":
 	{
 		"nodetype":"scales",
-		"start_delay":6,
-		"restart_delay":6,
-		"max_retry":5,
+		"start_delay":60,
+		"restart_delay":60,
+		"max_retry":-1,
 		"logpath":"/var/log/project_sperm/log_scales1_{}.log",
 		"logsuffixformat":"%Y_%m_%d_%X_%z",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
@@ -43,8 +43,8 @@
 	"cam0":
 	{
 		"nodetype":"cam",
-		"start_delay":60,
-		"restart_delay":60,
+		"start_delay":5,
+		"restart_delay":5,
 		"max_retry":-1,
 		"logpath":"/var/log/project_sperm/log_cam0_{}.log",
 		"logsuffixformat":"%Y_%m_%d_%X_%z",
@@ -57,7 +57,7 @@
 
 		"addr":"http://211.83.111.245/biaoben/img_receive.php",
 		"imgfilepath":"/tmp/img_cam0.jpg",
-		"interval":600,
+		"timeinterval":60,
 		"videodevice":"/dev/video0",
 		"resolution":[1080,720]
 	},
