new process for a job

--- a/newhub/config.json
+++ b/newhub/config.json
@@ -4,9 +4,8 @@
 		"nodetype":"maillog",
 		"start_delay":60,
 		"restart_delay":60,
-		"max_retry":5,
-		"logpath":"/var/log/project_sperm/log_maillog_{}.log",
-		"logsuffixformat":"%Y_%m_%d_%X_%z",
+		"repeat_time":1,
+		"logpath":"/var/log/project_sperm/",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
 		"pidfile":"/temp/project_sperm_maillog.pid",
 		"dpidfile":"/temp/project_sperm_maillogd.pid",
@@ -17,16 +16,15 @@
 		"from":"one_mail_addr@163.com",
 		"passwd":"1authcode",
 		"mail_list":["woxuankai@gmail.com"],
-		"logs2update":["/var/log/project_sperm/logs/"]
+		"logs2update":["/var/log/project_sperm/"]
 	},
 	"scales1":
 	{
 		"nodetype":"scales",
 		"start_delay":120,
-		"restart_delay":120,
-		"max_retry":-1,
-		"logpath":"/var/log/project_sperm/log_scales1_{}.log",
-		"logsuffixformat":"%Y_%m_%d_%X_%z",
+		"restart_delay":60,
+		"repeat_time":-1,
+		"logpath":"/var/log/project_sperm/",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
 		"pidfile":"/temp/project_sperm_scales1.pid",
 		"dpidfile":"/temp/project_sperm_scales1d.pid",
@@ -38,16 +36,14 @@
 		"baudrate":9600,
 		"scalesid":1,
 		"srvaddr":"http://211.83.111.245/biaoben/receive.php",
-		"interval":30
 	},
 	"cam0":
 	{
 		"nodetype":"cam",
 		"start_delay":150,
-		"restart_delay":150,
-		"max_retry":-1,
-		"logpath":"/var/log/project_sperm/log_cam0_{}.log",
-		"logsuffixformat":"%Y_%m_%d_%X_%z",
+		"restart_delay":600,
+		"repeat_time":-1,
+		"logpath":"/var/log/project_sperm/",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
 		"pidfile":"/temp/project_sperm_cam0.pid",
 		"dpidfile":"/temp/project_sperm_cam0d.pid",
@@ -57,7 +53,6 @@
 
 		"addr":"http://211.83.111.245/biaoben/img_receive.php",
 		"imgfilepath":"/tmp/img_cam0.jpg",
-		"timeinterval":600,
 		"videodevice":"/dev/video0",
 		"resolution":[1280,720]
 	},
@@ -66,9 +61,8 @@
 		"nodetype":"test",
 		"start_delay":5,
 		"restart_delay":5,
-		"max_retry":5,
-		"logpath":"/var/log/project_sperm/log_test0_{}.log",
-		"logsuffixformat":"%Y_%m_%d_%X_%z",
+		"repeat_time":5,
+		"logpath":"/var/log/project_sperm/",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
 		"pidfile":"/temp/project_sperm_test0.pid",
 		"dpidfile":"/temp/project_sperm_test0d.pid",
