--- a/newhub/config.json
+++ b/newhub/config.json
@@ -55,6 +55,22 @@
 		"imgfilepath":"/tmp/img_cam0.jpg",
 		"videodevice":"/dev/video0",
 		"resolution":[1280,720]
+	},
+	"test0":
+	{
+		"nodetype":"test",
+		"start_delay":5,
+		"restart_delay":5,
+		"repeat_time":5,
+		"logpath":"./",
+		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
+		"pidfile":"/temp/project_sperm_test0.pid",
+		"dpidfile":"/temp/project_sperm_test0d.pid",
+		"stdout":"/dev/null",
+		"stdin":"/dev/null",
+		"stderr":"/dev/null",
+
+		"exitcode":0
 	}
 }
 
