--- a/newhub/config.json
+++ b/newhub/config.json
@@ -2,9 +2,9 @@
 	"maillog":
 	{
 		"nodetype":"maillog",
-		"start_delay":600,
+		"start_delay":10,
 		"restart_delay":60,
-		"repeat_time":-1,
+		"repeat_time":1,
 		"logpath":"/var/log/project_sperm/",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
 		"pidfile":"/temp/project_sperm_maillog.pid",
@@ -12,23 +12,23 @@
 		"stdout":"/dev/null",
 		"stdin":"/dev/null",
 		"stderr":"/dev/null",
-		"smtp":
+
+		"email":
 		{
 			"account":"one_mail_addr@163.com",
 			"passwd":"1authcode",
 			"server":"smtp.163.com",
-			"server_port":994,
-			"encryption":true,
+			"server_port":25,
+			"encryption":false,
 			"from_addr":"one_mail_addr@163.com",
-			"to_addrs":["woxuankai@gmail.com"],
+			"to_addrs":["woxuankai@gmail.com"]
 		},
-		"logspath":["/var/log/project_sperm/"],
-		"logformat":""
+		"logspath":["/var/log/project_sperm/"]
 	},
 	"scales1":
 	{
 		"nodetype":"scales",
-		"start_delay":120,
+		"start_delay":500,
 		"restart_delay":60,
 		"repeat_time":-1,
 		"logpath":"/var/log/project_sperm/",
@@ -47,7 +47,7 @@
 	"cam0":
 	{
 		"nodetype":"cam",
-		"start_delay":150,
+		"start_delay":600,
 		"restart_delay":600,
 		"repeat_time":-1,
 		"logpath":"/var/log/project_sperm/",
