--- a/newhub/config.json
+++ b/newhub/config.json
@@ -23,6 +23,7 @@
 			"from_addr":"one_mail_addr@163.com",
 			"to_addrs":["woxuankai@gmail.com"]
 		},
+		"time_delete":14400,
 		"logspath":["/var/log/project_sperm/"]
 	},
 	"scales1":
