--- a/newhub/config.json
+++ b/newhub/config.json
@@ -23,7 +23,8 @@
 			"from_addr":"one_mail_addr@163.com",
 			"to_addrs":["woxuankai@gmail.com"]
 		},
-		"time_delete":10800,
+		"time_delete":10800, 
+		"ifsend":true,
 		"logspath":["/var/log/project_sperm/"]
 	},
 	"scales1":
