--- a/newhub/config.json
+++ b/newhub/config.json
@@ -79,7 +79,24 @@
 		"stdin":"/dev/null",
 		"stderr":"/dev/null",
 
-		"exitcode":0
+		"exitcode":1
+	},
+	"test1":
+	{
+		"nodetype":"test",
+		"start_delay":5,
+		"restart_delay":5,
+		"repeat_time":5,
+		"logpath":"/tmp/",
+		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
+		"pidfile":"/temp/project_sperm_test1.pid",
+		"dpidfile":"/temp/project_sperm_test1d.pid",
+		"stdout":"/dev/null",
+		"stdin":"/dev/null",
+		"stderr":"/dev/null",
+
+		"exitcode":2
 	}
+
 }
 
