--- a/newhub/config.json
+++ b/newhub/config.json
@@ -2,8 +2,8 @@
 	"maillog":
 	{
 		"nodetype":"maillog",
-		"start_delay":10,
-		"restart_delay":60,
+		"start_delay":10800,
+		"restart_delay":3600,
 		"repeat_time":1,
 		"logpath":"/var/log/project_sperm/",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
@@ -24,14 +24,14 @@
 			"to_addrs":["woxuankai@gmail.com"]
 		},
 		"time_delete":10800, 
-		"ifsend":false,
+		"ifsend":true,
 		"logspath":["/var/log/project_sperm/"]
 	},
 	"scales1":
 	{
 		"nodetype":"scales",
-		"start_delay":500,
-		"restart_delay":60,
+		"start_delay":23,
+		"restart_delay":119,
 		"repeat_time":-1,
 		"logpath":"/var/log/project_sperm/",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
@@ -49,8 +49,8 @@
 	"cam0":
 	{
 		"nodetype":"cam",
-		"start_delay":600,
-		"restart_delay":600,
+		"start_delay":15,
+		"restart_delay":601,
 		"repeat_time":-1,
 		"logpath":"/var/log/project_sperm/",
 		"logformat":"%(asctime)s - %(levelname)s - %(name)s : %(message)s",
@@ -68,7 +68,7 @@
 	"test0":
 	{
 		"nodetype":"test",
-		"start_delay":5,
+		"start_delay":50,
 		"restart_delay":5,
 		"repeat_time":5,
 		"logpath":"/tmp/",
